--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
+    "transcrypt": "^3.6.82",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
