--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "helmet": "^6.1.5",
     "monaco-editor": "^0.36.1",
     "pyodide-worker-runner": "^1.3.2",
     "react": "^18.2.0",
